--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,6 +105,7 @@ video {
   border: 0;
   font-size: 100%;
   vertical-align: baseline;
+  direction: rtl;
 }
 
 html {
@@ -1169,7 +1170,7 @@ textarea {
   height: 44px;
   padding: 0 10px;
   font-family: "Poppins", sans-serif;
-  background-color: #272a31;
+  background-color: #30343c;
   border: 2px solid transparent;
   border-bottom-color: #f23849;
   color: #fff;
@@ -1326,7 +1327,7 @@ textarea::placeholder {
 
 .checkbox-cover p {
   position: relative;
-  padding-left: 44px;
+  padding-right: 44px;
   color: #bebebe;
   font-family: "Poppins", sans-serif;
 }
@@ -1342,7 +1343,7 @@ textarea::placeholder {
   font-size: 14px;
   position: absolute;
   top: -2px;
-  left: 0;
+  right: 0;
   text-align: center;
   color: #f23849;
   border-radius: 5px;
@@ -2668,7 +2669,7 @@ blockquote:before {
 
 /*-------------------- S-CONTACTS --------------------*/
 .s-contacts {
-  padding: 140px 0;
+  padding: 10px 0;
   background-position: center;
   background-repeat: no-repeat;
 }
@@ -3001,6 +3002,35 @@ blockquote:before {
   transform: translateY(0);
 }
 
+.form-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+  background-color: #272a31;
+  box-shadow: 4px 4px 14px 0px rgba(0, 0, 0, 0.15);
+  background-position: center;
+  background-repeat: no-repeat;
+  padding: 50px;
+  position: relative;
+}
+
+.form-card:before {
+  content: '';
+  position: absolute;
+  width: 95%;
+  height: 95%;
+  left: 50%;
+  top: 50%;
+  opacity: 1;
+  /* margin-top: 40px; */
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  border: 7px solid #f23849;
+  transition: .4s ease-in-out;
+  pointer-events: none;
+}
+
 .club-card-item {
   display: flex;
   flex-direction: column;
@@ -3191,7 +3221,7 @@ blockquote:before {
   justify-content: center;
   text-transform: uppercase;
   letter-spacing: 1px;
-  padding: 20px ;
+  padding: 20px;
   position: relative;
 }
 
@@ -6603,4 +6633,14 @@ blockquote:before {
   .widget-instagram li img {
     height: 100px;
   }
+}
+
+.btn-form-card button{
+  width: 100%;
+
+}
+
+.btn-card{
+  width: 100%;
+  margin-bottom: 20px;
 }
